# AironmanGPT

./: .cache_ggshield  .example.env  .gitignore  DarkAgent.py  Dockerfile  Dockerfile-non-bash  README.md  Rem-slerp-l2-13b vs Mythalion-13b-pentesting-roadm  actual-output.txt  allowed_commands.sh  cli.py  dehashed_api.py  docker-compose.yaml  file_ports_services_vulnerabilities.nmap  functions.py  graph.db  ideas.txt  main.py  makefile  metasploit.info  nmap.txt  pyproject.toml  requirements.txt  seccomp-profile.json  train_lily_model.py
prompts/: agent_prompt.txt  initialize_agent_prompt.txt  metasploit_agent_prompt.txt  metasploit_ports_services_vulns_agent_prompt.txt  metasploit_ports_systems_services_agent_prompt.txt  metasploit_reconn_agent_prompt.txt  ports_services_vulnerabilities_agent_prompt.txt  ports_system_services_agent_prompt.txt  recoinassance_agent_prompt.txt  router_prompt.txt
tests/: live_subdomains.txt  subdomains.txt  test_premai.py  test_raphmemory.py  test_subfinder_httpx.sh  test_tiktok.py  test_train_lily_model.py  test_zero_day.py  test_zero_day1.py
tools/: chat_zero_day.py  download-model.py  file_Reconnaissance.nmap  file_nmap_ports_systems_services.nmap  file_nmap_reconnaissance.nmap  file_wireshark_dispatch_nmap_ports_systems_services.pcap  google_colab_zero.py  metasploit.py  nmap_recognition.py  tools.py  tshark_nmap.py
