[tool.poetry]
name = "aironmangpt"
version = "0.1.0"
description = "AironmanGPT is an OSINT assistant based on DarkGPT (recommended use) designed to perform initial pentesting tasks. The idea is to use agents that encompass different pentesting tools, each one designed for a specific phase of pentesting."
authors = ["Alonso Isidoro Román <alonsoir@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.33.0"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic = "^2.7.3"
black = "^24.4.2"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
